# serializer version: 1
# name: test_devices[devices_clear]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '',
  })
# ---
# name: test_devices[devices_list]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Listing devices for household 7777
      
      Index | ID      | Name                | ProductId
      -------------------------------------------------
      0     | 269654  | Maui matlåda (old)  | 4
      1     | 1187564 | Maurice Futter      | 4
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path0]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices [OPTIONS] COMMAND [ARGS]...
      
       Devices commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ list             List devices                                                │
      │ connect          Select a device to work with                                │
      │ clear            Clear selected device                                       │
      │ feederconnect    Feeder device commands                                      │
      │ dualscanconnect  Flap device commands                                        │
      │ petdoor          PetDoor device commands                                     │
      │ hub              PetDoor device commands                                     │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path10]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect bowl-type-options [OPTIONS]
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --device-id           TEXT  Device ID.                                       │
      │ --household-id        TEXT  Household ID. [env var: SUREPCCLI_HOUSEHOLD_ID]  │
      │ --help                      Show this message and exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path11]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices dualscanconnect [OPTIONS] COMMAND [ARGS]...
      
       Flap device commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ curfew   Set flap curfew mode                                                │
      │ locking  Set flap locking mode                                               │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path12]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices dualscanconnect curfew [OPTIONS]
      
       Set flap curfew mode
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      CURFEW  Set new curfew times (omit to show current). │
      │ --device-id             TEXT    Device ID.                                   │
      │ --household-id          TEXT    Household ID.                                │
      │                                 [env var: SUREPCCLI_HOUSEHOLD_ID]            │
      │ --help                          Show this message and exit.                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path13]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices dualscanconnect locking [OPTIONS]
      
       Set flap locking mode
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [UNLOCKED|ALLOW_IN|ALLOW  Set new locking mode (omit │
      │                         _OUT|LOCKED|CURFEW_MODE]  to show current).          │
      │ --device-id             TEXT                      Device ID.                 │
      │ --household-id          TEXT                      Household ID.              │
      │                                                   [env var:                  │
      │                                                   SUREPCCLI_HOUSEHOLD_ID]    │
      │ --help                                            Show this message and      │
      │                                                   exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path14]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices petdoor [OPTIONS] COMMAND [ARGS]...
      
       PetDoor device commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ curfew   Set locking mode                                                    │
      │ locking  Set flap locking mode                                               │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path15]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices petdoor curfew [OPTIONS]
      
       Set locking mode
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      CURFEW  Set new curfew times (omit to show current). │
      │ --device-id             TEXT    Device ID.                                   │
      │ --household-id          TEXT    Household ID.                                │
      │                                 [env var: SUREPCCLI_HOUSEHOLD_ID]            │
      │ --help                          Show this message and exit.                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path16]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices petdoor locking [OPTIONS]
      
       Set flap locking mode
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [UNLOCKED|ALLOW_IN|ALLOW  Set new locking mode (omit │
      │                         _OUT|LOCKED|CURFEW_MODE]  to show current).          │
      │ --device-id             TEXT                      Device ID.                 │
      │ --household-id          TEXT                      Household ID.              │
      │                                                   [env var:                  │
      │                                                   SUREPCCLI_HOUSEHOLD_ID]    │
      │ --help                                            Show this message and      │
      │                                                   exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path17]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices hub [OPTIONS] COMMAND [ARGS]...
      
       PetDoor device commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ led-mode      LED mode                                                       │
      │ pairing-mode  Pairing mode                                                   │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path18]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices hub led-mode [OPTIONS]
      
       LED mode
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [NONE|STRONG|WEAK]  Set LED mode (omit to show       │
      │                                             current).                        │
      │ --device-id             TEXT                Device ID.                       │
      │ --household-id          TEXT                Household ID.                    │
      │                                             [env var:                        │
      │                                             SUREPCCLI_HOUSEHOLD_ID]          │
      │ --help                                      Show this message and exit.      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path19]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices hub pairing-mode [OPTIONS]
      
       Pairing mode
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [DISABLED|ON]  Set pairing mode (omit to show        │
      │                                        current).                             │
      │ --device-id             TEXT           Device ID.                            │
      │ --household-id          TEXT           Household ID.                         │
      │                                        [env var: SUREPCCLI_HOUSEHOLD_ID]     │
      │ --help                                 Show this message and exit.           │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path1]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices list [OPTIONS]
      
       List devices
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --product-id    -p      TEXT  Product ID.                                    │
      │ --household-id          TEXT  Household ID.                                  │
      │                               [env var: SUREPCCLI_HOUSEHOLD_ID]              │
      │ --help                        Show this message and exit.                    │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path2]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices connect [OPTIONS]
      
       Select a device to work with
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --product-id    -p      TEXT  Product ID.                                    │
      │ --household-id          TEXT  Household ID.                                  │
      │                               [env var: SUREPCCLI_HOUSEHOLD_ID]              │
      │ --help                        Show this message and exit.                    │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path3]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices clear [OPTIONS]
      
       Clear selected device
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path4]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect [OPTIONS] COMMAND [ARGS]...
      
       Feeder device commands
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --help          Show this message and exit.                                  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
      ╭─ Commands ───────────────────────────────────────────────────────────────────╮
      │ fill-percentages                                                             │
      │ lid-delay                                                                    │
      │ training-mode                                                                │
      │ tare                                                                         │
      │ bowl-type                                                                    │
      │ bowl-type-options                                                            │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path5]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect fill-percentages [OPTIONS]
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --device-id           TEXT  Device ID.                                       │
      │ --household-id        TEXT  Household ID. [env var: SUREPCCLI_HOUSEHOLD_ID]  │
      │ --help                      Show this message and exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path6]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect lid-delay [OPTIONS]
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [FASTER|NORMAL|SLOWER]  Set new lid close delay      │
      │                                                 (omit to show current).      │
      │ --device-id             TEXT                    Device ID.                   │
      │ --household-id          TEXT                    Household ID.                │
      │                                                 [env var:                    │
      │                                                 SUREPCCLI_HOUSEHOLD_ID]      │
      │ --help                                          Show this message and exit.  │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path7]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect training-mode [OPTIONS]
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [DISABLED|STEP_1|STEP_2|  Set new training mode      │
      │                         STEP_3|STEP_4]            (omit to show current).    │
      │ --device-id             TEXT                      Device ID.                 │
      │ --household-id          TEXT                      Household ID.              │
      │                                                   [env var:                  │
      │                                                   SUREPCCLI_HOUSEHOLD_ID]    │
      │ --help                                            Show this message and      │
      │                                                   exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path8]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect tare [OPTIONS]
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [DISABLED|RESET_LARGE|RES  Set tare settings (omit   │
      │                         ET_RIGHT|RESET_BOTH]       to show current).         │
      │ --device-id             TEXT                       Device ID.                │
      │ --household-id          TEXT                       Household ID.             │
      │                                                    [env var:                 │
      │                                                    SUREPCCLI_HOUSEHOLD_ID]   │
      │ --help                                             Show this message and     │
      │                                                    exit.                     │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_cmd_help[command_path9]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      
       Usage: root devices feederconnect bowl-type [OPTIONS]
      
      ╭─ Options ────────────────────────────────────────────────────────────────────╮
      │ --state         -s      [LARGE_WET|LARGE_DRY|TWO  Set bowl type/settings     │
      │                         _SMALL_WET_WET|TWO_SMALL  (omit to show current).    │
      │                         _WET_DRY|TWO_SMALL_DRY_W                             │
      │                         ET|TWO_SMALL_DRY_DRY]                                │
      │ --device-id             TEXT                      Device ID.                 │
      │ --household-id          TEXT                      Household ID.              │
      │                                                   [env var:                  │
      │                                                   SUREPCCLI_HOUSEHOLD_ID]    │
      │ --help                                            Show this message and      │
      │                                                   exit.                      │
      ╰──────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_devices_connect[devices_connect]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Listing devices for household 7777
      
      Index | ID      | Name                | ProductId
      -------------------------------------------------
      0     | 269654  | Maui matlåda (old)  | 4
      1     | 1187564 | Maurice Futter      | 4
      Connect to device: 0
    ''',
  })
# ---
# name: test_dualscanconnect[devices_dualscanconnect_curfew0]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1334025
      curfew: [{'enabled': True, 'lock_time': '19:30', 'unlock_time': '06:00'}, {'enabled': False, 'lock_time': '12:00', 'unlock_time': '12:01'}, {'enabled': False, 'lock_time': '13:00', 'unlock_time': '13:01'}, {'enabled': False, 'lock_time': '14:00', 'unlock_time': '14:01'}]
    ''',
  })
# ---
# name: test_dualscanconnect[devices_dualscanconnect_curfew1]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': 'Device 1334025 curfew set to [Curfew(enabled=True, lock_time=datetime.time(8, 0), unlock_time=datetime.time(18, 0))].',
  })
# ---
# name: test_dualscanconnect[devices_dualscanconnect_locking0]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1334025
      locking: UNLOCKED
    ''',
  })
# ---
# name: test_dualscanconnect[devices_dualscanconnect_locking1]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': 'Device 1334025 lock set to UNLOCKED.',
  })
# ---
# name: test_feederconnect[devices_feederconnect_bowl_type]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1187564
      bowls: {'settings': [{'food_type': <FoodType.DRY: 2>, 'target': 65.5}], 'type': <BowlType.LARGE: 1>}
    ''',
  })
# ---
# name: test_feederconnect[devices_feederconnect_bowl_type_options]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1187564
      Available Options:
      LARGE_DRY
    ''',
  })
# ---
# name: test_feederconnect[devices_feederconnect_fill_percentages]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Type   | Percentage
      -------------------
      Bowl 0 | -61.59
      Total  | -61
    ''',
  })
# ---
# name: test_feederconnect[devices_feederconnect_lid_delay]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1187564
      lid_delay: FASTER
    ''',
  })
# ---
# name: test_feederconnect[devices_feederconnect_tare]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1187564
      tare: None
    ''',
  })
# ---
# name: test_feederconnect[devices_feederconnect_training_mode]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 1187564
      training_mode: DISABLED
    ''',
  })
# ---
# name: test_hub[devices_hub_led_mode]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 295972
      led_mode: NONE
    ''',
  })
# ---
# name: test_hub[devices_hub_pairing_mode]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 295972
      pairing_mode: DISABLED
    ''',
  })
# ---
# name: test_petdoor[devices_petdoor_curfew]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 727608
      curfew: {'enabled': False, 'lock_time': '08:00', 'unlock_time': '17:00'}
    ''',
  })
# ---
# name: test_petdoor[devices_petdoor_locking]
  dict({
    'exception': None,
    'exit_code': 0,
    'output': '''
      Device 727608
      Locking: UNLOCKED
    ''',
  })
# ---
